fix style of facet visibility block.

--- a/mica-modules/mica/includes/facet-visibility.css
+++ b/mica-modules/mica/includes/facet-visibility.css
@@ -2,6 +2,7 @@
 
 #mica-facet-visibility-form {
   padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 #mica-facet-visibility-form #edit-block .fieldset-wrapper {
